--- a/makefile.dos
+++ b/makefile.dos
@@ -95,6 +95,9 @@ OXYGEN_SRC := drivers/oxygen/xonar_dg.c \
 ALLEGRO_SRC := drivers/maestro3/maestro3.c \
 	       mpxplay/au_cards/sc_allegro.c \
 
+GEODE_SRC := drivers/cs5535audio/cs5535audio.c \
+	       mpxplay/au_cards/sc_geode.c \
+
 SBEMU_SRC := sbemu/dbopl.cpp \
 	     sbemu/opl3emu.cpp \
 	     sbemu/pic.c \
@@ -116,7 +119,7 @@ SBEMU_SRC := sbemu/dbopl.cpp \
 	     hdpmipt.c \
              irqguard.c \
 
-LINUX_DRIVERS_SRC := $(CTXFI_SRC) $(EMU10K1_SRC) $(TRIDENT_SRC) $(ALS4000_SRC) $(OXYGEN_SRC) $(ALLEGRO_SRC)
+LINUX_DRIVERS_SRC := $(CTXFI_SRC) $(EMU10K1_SRC) $(TRIDENT_SRC) $(ALS4000_SRC) $(OXYGEN_SRC) $(ALLEGRO_SRC) $(GEODE_SRC)
 SRC := $(LINUX_DRIVERS_SRC) $(CARDS_SRC) $(SBEMU_SRC)
 OBJS := $(patsubst %.cpp,output/%.o,$(patsubst %.c,output/%.o,$(SRC)))
 
